--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 body {
-	font: 'Raleway', sans-serif;
+	font: 1000  2m Arial;
     color: rgba(0,0,0,.5);
     text-align: center;
     text-transform: uppercase;
@@ -9,7 +9,7 @@ body {
 }
 
 h1 {
-    font: 600 3.5em 'Raleway', sans-serif;
+    font: 600 3.5em Arial;
     color: rgba(0,0,0,.5);
     text-align: center;
     text-transform: uppercase;
@@ -17,11 +17,52 @@ h1 {
     width: 100%;
 }
 
-h3 {
-	font: 900 1em 'Raleway', sans-serif;
+h2{
+	font: 900 1em Arial;
     color: rgba(0,0,0,.5);
     text-align: center;
     text-transform: none;
     letter-spacing: 0.01em;
 
+}
+
+h3 {
+	font: 300 1em Arial;
+    color: rgba(0,0,0,.5);
+    text-align: center;
+    text-transform: none;
+    letter-spacing: 0.01em;
+    margin-bottom: 60px;
+
+}
+
+h4 {
+    font: 300 1em Arial;
+}
+
+#button {
+    cursor: pointer;
+    padding: 10px 13px;
+    margin-top: 30px;
+    border-radius: 8px;
+    border-top: 15px;
+    box-sizing: 500%;
+    margin-block: 10px;
+    box-shadow: 7px;
+    font-size: larger;
+    font-family: Arial, Helvetica, sans-serif;
+    text-align: center;
+    background-color:mintcream
+    
+}
+
+#button:hover {
+    transform: scale(1.3,1.3);
+    transform: matrix(2,3);
+    transition: 0.7s ease-in-out;
+}
+
+.class1, .class2 {
+    margin: 300px;
+    border-color:black;
 }
